--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Examplus Medical Spa</title>
-    <meta name="description" content="Find your editor and create your home" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Discover luxury medical spa treatments designed for beauty, wellness, and rejuvenation. Book a consultation today at Examplus Medical Spa." />
+    <meta name="author" content="Examplus Medical Spa | Aesthetic & Wellness Excellence" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap" />
   </head>
